--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "eva.watch",
   "version": "0.1.0",
-  "private": true,
+  "description": "A luxury web clock with beautiful skins, world clocks, and smooth animations",
+  "author": "eva.watch",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/superzero11/eva.watch.git"
+  },
+  "bugs": {
+    "url": "https://github.com/superzero11/eva.watch/issues"
+  },
+  "homepage": "https://eva.watch",
+  "keywords": [
+    "clock",
+    "world-clock",
+    "pwa",
+    "nextjs",
+    "react",
+    "tailwindcss"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +27,35 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@use-gesture/react": "^10.3.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.26.2",
+    "idb": "^8.0.3",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hotkeys-hook": "^5.2.1",
+    "react-leaflet": "^5.0.0",
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
